--- a/WeaponSystem.asmdef
+++ b/WeaponSystem.asmdef
@@ -1,6 +1,6 @@
 {
     "name": "WeaponSystem",
-    "rootNamespace": "WeaponSystem",
+    "rootNamespace": "",
     "references": [],
     "includePlatforms": [],
     "excludePlatforms": [],
